[gd_scene load_steps=5 format=3 uid="uid://dfqkruki0gsy7"]

[ext_resource type="Script" path="res://Scripts/bases.gd" id="1_yaupi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kg6p"]
size = Vector2(6, 16.2578)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ddpt5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1moh"]
size = Vector2(18, 20)

[node name="Base" type="Area2D"]
position = Vector2(0, -3)
collision_layer = 16
script = ExtResource("1_yaupi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_0kg6p")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5.96046e-08, 3)
scale = Vector2(17, 1.9375)
texture = SubResource("PlaceholderTexture2D_ddpt5")

[node name="safeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="safeArea"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_b1moh")
debug_color = Color(0.52654, 0.557503, 0.370898, 0.42)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="safeArea" to="." method="_on_safe_area_body_entered"]
[connection signal="body_exited" from="safeArea" to="." method="_on_safe_area_body_exited"]
